exports[`Footer component renders with defaults 1`] = `
"<footer id=\"footer\" class=\"footer\">
  <div class=\"block\">
    <div class=\"prose footer__profile\">
      <div class=\"footer__avatar\"></div>
      <h3><a href=\"/about/\">I&#x2019;m David Bushell</a></h3>
      <p class=\"p--light\">Based in the UK, near Manchester, I freelance for small businesses, start-ups, individuals, and fellow web agencies &#x2014; all over the world.</p>
    </div>
    <a href=\"/contact/\" class=\"footer__hire\"><img src=\"/assets/img/dbushell-for-hire.svg\" alt=\"Available for Hire\"></a>
    <aside class=\"prose footer__blog\" role=\"complementary\">
      <h3>From the blog&#x2026;</h3>
      <ul>
        <li><a rel=\"bookmark\" href=\"/2016/12/16/resolving-javascript-promises-sequentially-without-nesting/\">Working with Promises</a><time class=\"time\" datetime=\"2016-12-16T10:00:00.000Z\">Friday <b>16 <abbr title=\"December\">Dec</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/12/02/my-thoughts-on-react/\">My thoughts on React</a><time class=\"time\" datetime=\"2016-12-02T10:00:00.000Z\">Friday <b>2 <abbr title=\"December\">Dec</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/10/10/building-a-shopify-theme/\">Building a Shopify Theme</a><time class=\"time\" datetime=\"2016-10-10T10:00:00.000Z\">Monday <b>10 <abbr title=\"October\">Oct</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/09/01/colour-accessibility/\">Colour Accessibility</a><time class=\"time\" datetime=\"2016-09-01T10:00:00.000Z\">Thursday <b>1 <abbr title=\"September\">Sep</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/07/14/building-a-wordpress-theme/\">Building a WordPress Theme</a><time class=\"time\" datetime=\"2016-07-14T10:00:00.000Z\">Thursday <b>14 <abbr title=\"July\">Jul</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/07/12/new-origins/\">New Origins</a><time class=\"time\" datetime=\"2016-07-12T10:00:00.000Z\">Tuesday <b>12 <abbr title=\"July\">Jul</abbr> 2016</b></time></li>
      </ul>
    </aside>
    <hr>
    <p class=\"p--small\"><small>Copyright &#xA9; 2017 <a href=\"/\">David Bushell</a></small></p>
  </div>
</footer>"
`;

exports[`Footer component renders without "for hire" element 1`] = `
"<footer id=\"footer\" class=\"footer\">
  <div class=\"block\">
    <div class=\"prose footer__profile\">
      <div class=\"footer__avatar\"></div>
      <h3><a href=\"/about/\">I&#x2019;m David Bushell</a></h3>
      <p class=\"p--light\">Based in the UK, near Manchester, I freelance for small businesses, start-ups, individuals, and fellow web agencies &#x2014; all over the world.</p>
    </div>
    <hr>
    <aside class=\"prose footer__blog\" role=\"complementary\">
      <h3>From the blog&#x2026;</h3>
      <ul>
        <li><a rel=\"bookmark\" href=\"/2016/12/16/resolving-javascript-promises-sequentially-without-nesting/\">Working with Promises</a><time class=\"time\" datetime=\"2016-12-16T10:00:00.000Z\">Friday <b>16 <abbr title=\"December\">Dec</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/12/02/my-thoughts-on-react/\">My thoughts on React</a><time class=\"time\" datetime=\"2016-12-02T10:00:00.000Z\">Friday <b>2 <abbr title=\"December\">Dec</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/10/10/building-a-shopify-theme/\">Building a Shopify Theme</a><time class=\"time\" datetime=\"2016-10-10T10:00:00.000Z\">Monday <b>10 <abbr title=\"October\">Oct</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/09/01/colour-accessibility/\">Colour Accessibility</a><time class=\"time\" datetime=\"2016-09-01T10:00:00.000Z\">Thursday <b>1 <abbr title=\"September\">Sep</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/07/14/building-a-wordpress-theme/\">Building a WordPress Theme</a><time class=\"time\" datetime=\"2016-07-14T10:00:00.000Z\">Thursday <b>14 <abbr title=\"July\">Jul</abbr> 2016</b></time></li>
        <li><a rel=\"bookmark\" href=\"/2016/07/12/new-origins/\">New Origins</a><time class=\"time\" datetime=\"2016-07-12T10:00:00.000Z\">Tuesday <b>12 <abbr title=\"July\">Jul</abbr> 2016</b></time></li>
      </ul>
    </aside>
    <hr>
    <p class=\"p--small\"><small>Copyright &#xA9; 2017 <a href=\"/\">David Bushell</a></small></p>
  </div>
</footer>"
`;
